Fixed invisible separator in light mode

--- a/src/components/main-content/MeaningsExample.scss
+++ b/src/components/main-content/MeaningsExample.scss
@@ -2,5 +2,8 @@
 
 .example {
   margin-top: 1.3rem;
-  color: $back-color;
+  color: rgba($font-color, 50%);
+  .light & {
+    color: rgba($light-font-color, 50%);
+  }
 }
